7/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busy
  labels:
    name: busy
spec:
  containers:
  - name: busy
    image: radial/busyboxplus:curl
    command: ["sh", "-c", "sleep 3600"]
